[package]
name = "ptproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
futures = "0.3"
h3 = "0.0.2"
h3-quinn = "0.0.3"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["client", "server", "http1", "runtime"] }
quinn = { version = "0.10.1", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "ring",
] }
rustls = "0.21.5"
rustls-native-certs = "0.6"
structopt = { version = "0.3.26", features = ["color"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.10"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
