[package]
name = "ptproxy"
version = "1.0.1"
edition = "2021"

[dependencies]
bytes = "1"
futures = "0.3.28"
h3 = "0.0.2"
h3-quinn = "0.0.3"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["client", "server", "http1", "runtime"] }
quinn = { version = "0.10.1", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "ring",
] }
rand = "0.8.5"
rustls = { version = "0.21.5", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.171", features = ["derive"] }
socket2 = "0.5.3"
structopt = { version = "0.3.26", features = ["color"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.8"
toml = "0.7.6"
tracing = "0.1.10"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
